# pyDataFitting

./: .gitignore  README.md  environment.yml  linear_regression.py  multivariate_regression.py  nonlinear_regression.py  pca_viewer.py  polynomial_regression.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: model_tools_example.py  percentile_plot_shapiro.py  principal_component_regression_example.py
src/pyDataFitting/: __init__.py  lmfit_nonlinear_regression.py  model_diagnostics.py  model_tools.py  multivariate_regression.py  nonlinear_regression.py  partial_least_squares_regression.py  polynomial_regression.py  principle_component_regression.py
src/pyRegression/: __init__.py  linear_regression.py  multivariate_regression.py  pca_viewer.py  polynomial_regression.py
tests/: test_model_tools.py  test_nonlinear_regresssion.py  test_piecewise_polynomial_fit.py  test_polynomial_regression.py  test_principal_component_regression.py
