[metadata]
name = pyDataFitting
version = 0.0.2
author = Alexander Southan
author_email = alexander.southan@web.de
description = package for specialized regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexanderSouthan/pyDataFitting
project_urls =
    Bug Tracker = https://github.com/AlexanderSouthan/pyDataFitting/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
